2003-10-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (MogrifyImage): Only transform the colorspace
	if it has been set (i.e. is not UndefinedColorspace).

2003-10-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* PerlMagick/t/tiff/write.t: Added TIFF write tests for 4
	bits-per-sample TIFF images, both with and without a transparency
	channel.
	* magick/image.c (DescribeImage): Added -verbose support for
	displaying individual channel depths.

2003-10-06  Lars Ruben Skyum  <lars.skyum@stibo.com>

	* magick/image.c (SetImageInfo): cleaned up parsing of sub-image
	spcification (image.psd[0]). It would fail sometimes due to
	incorrect reuse of variables. It's a bit strange the code accepts
	more range syntax-variations than can be stored in ImageInfo.

2003-10-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (ChannelImage): The OpacityChannel, MatteChannel,
	and BlackChannel operations set the matte channel to opaque, so
	set image->matte to False for those operations.
	(RGBTransformImage): Add an assertion to prevent passing the
	colorspace argument 'UndefinedColorspace'.
	(TransformRGBImage): Add an assertion to prevent passing an image
	with colorspace set to 'UndefinedColorspace'.

2003-10-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/log.c (LogToBlob): Since MagickSeek(file,0,SEEK_END) is
	used to obtain the Blob size, MagickSeek(file,0,SEEK_SET) must be
	used to restore the seek position.  Thanks to John Cristy for
	bringing this to our attention.

2003-10-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/bit_stream.h: Added a bit-stream writer function.
	* PerlMagick/t/reference/read/input_tim.miff: Reference image
	was defective.

2003-10-03  Lars Ruben Skyum  <lars.skyum@stibo.com>

	* magick/image.c, magick/image.h: Updated AddCoderOptions to
	accept "flag" keys that have no values. They are placed in the
	coder options map with an empty, zero length string value. Option